feat: solutions section UI

--- a/src/utils/locales/en.json
+++ b/src/utils/locales/en.json
@@ -2103,6 +2103,7 @@
   "gosafe-contact-submit-success": "Request sent successfully!",
   "gosafe-contact-submit-error": "An error occurred.",
 
+  "gosafe-nav-solutions": "Solutions",
   "gosafe-nav-product": "Products",
   "gosafe-nav-specs": "Specs",
   "gosafe-nav-contact": "Contact",
@@ -2195,5 +2196,48 @@
   "gosafe-product-powerbank-spec-1": "Dimensions: 76×52×48 mm",
   "gosafe-product-powerbank-spec-2": "Weight: 319.5g",
   "gosafe-product-powerbank-spec-3": "Voltage: 6–36V",
-  "gosafe-product-powerbank-spec-4": "Consumption: Active 160mA"
+  "gosafe-product-powerbank-spec-4": "Consumption: Active 160mA",
+  "gosafe-solutions-title": "Offender Tracking System",
+  "gosafe-solutions-subtitle": "System for management, supervision of bailees and community reintegration support",
+  "gosafe-solutions-cta-contact": "Contact Sales",
+  "gosafe-solutions-cta-learn": "Learn More",
+  "gosafe-solutions-admin-title": "System for Admin / Supervisor",
+  "gosafe-solutions-admin-1-title": "Live Monitoring",
+  "gosafe-solutions-admin-1-desc": "Real-time GPS tracking, route display, device status (fiber optic, battery, IBeacon).",
+  "gosafe-solutions-admin-2-title": "Alerts & Alarm System",
+  "gosafe-solutions-admin-2-desc": "Alerts for strap cut, low battery, geofence violation, signal loss via web, app, email, SMS.",
+  "gosafe-solutions-admin-3-title": "Geofence Management",
+  "gosafe-solutions-admin-3-desc": "Set permitted/prohibited zones (circle, polygon, route) and time-based geofences.",
+  "gosafe-solutions-admin-4-title": "Profile Management",
+  "gosafe-solutions-admin-4-desc": "Manage personal info, photos, ID, device assignment, and violation history.",
+  "gosafe-solutions-admin-5-title": "Tracking History",
+  "gosafe-solutions-admin-5-desc": "Route playback, speed reports, stops, and PDF/Excel export.",
+  "gosafe-solutions-admin-6-title": "Dashboard & Reports",
+  "gosafe-solutions-admin-6-desc": "Overview of status, alert reports, and analytics.",
+  "gosafe-solutions-admin-7-title": "User Management",
+  "gosafe-solutions-admin-7-desc": "Role-based access (Admin/Supervisor/Operator) and activity logs.",
+  "gosafe-solutions-app-title": "Mobile App for User / Offender",
+  "gosafe-solutions-app-desc": "App for monitored individuals to comply with obligations, reporting, and check-in.",
+  "gosafe-solutions-app-1-title": "Check‑in / Verification",
+  "gosafe-solutions-app-1-desc": "Selfie, biometric verification, unscheduled check-ins.",
+  "gosafe-solutions-app-2-title": "Location & Geofence",
+  "gosafe-solutions-app-2-desc": "Location recording, alerts for geofence violations.",
+  "gosafe-solutions-app-3-title": "Obligation Reminders",
+  "gosafe-solutions-app-3-desc": "Appointments, periodic reports, and duty reminders.",
+  "gosafe-solutions-app-4-title": "Communication",
+  "gosafe-solutions-app-4-desc": "Messaging, video/audio calls when requested.",
+  "gosafe-solutions-app-5-title": "Compliance History",
+  "gosafe-solutions-app-5-desc": "View check-in history, violations, and reminders.",
+  "gosafe-solutions-app-6-title": "Reintegration Support",
+  "gosafe-solutions-app-6-desc": "Social services info, employment, counseling, and psychological support.",
+  "gosafe-solution-group-1-title": "Smart Monitoring & Tracking",
+  "gosafe-solution-group-1-desc": "Real-time visibility into offender location and movement history with high precision.",
+  "gosafe-solution-group-2-title": "Security & Geofencing",
+  "gosafe-solution-group-2-desc": "Proactive alert system with flexible geofence configuration to ensure community safety.",
+  "gosafe-solution-group-3-title": "Identification & Compliance",
+  "gosafe-solution-group-3-desc": "Ensure the right person is at the right place with multi-factor authentication and scheduled check-ins.",
+  "gosafe-solution-group-4-title": "Management & Analytics",
+  "gosafe-solution-group-4-desc": "Centralized dashboard for profiles, devices, and deep insights into offender behavior.",
+  "gosafe-solution-group-5-title": "Multi-Platform Offender Tracking System",
+  "gosafe-solution-group-5-desc": "The mobile application is dedicated to the offender, facilitating compliance and communication. It enables biometric check-ins, secure messaging with authorities, and access to rehabilitation resources. This tool ensures offenders remain connected and adherent to their supervision conditions."
 }
