--- a/src/utils/locales/vi.json
+++ b/src/utils/locales/vi.json
@@ -2159,6 +2159,7 @@
   "gosafe-contact-submit-success": "Gửi yêu cầu thành công!",
   "gosafe-contact-submit-error": "Có lỗi xảy ra.",
 
+  "gosafe-nav-solutions": "Giải pháp",
   "gosafe-nav-product": "Sản phẩm",
   "gosafe-nav-specs": "Thông số",
   "gosafe-nav-contact": "Liên hệ",
@@ -2251,5 +2252,48 @@
   "gosafe-product-powerbank-spec-1": "Kích thước: 76×52×48 mm",
   "gosafe-product-powerbank-spec-2": "Trọng lượng: 319.5g",
   "gosafe-product-powerbank-spec-3": "Điện áp: 6–36V",
-  "gosafe-product-powerbank-spec-4": "Tiêu thụ: Active 160mA"
+  "gosafe-product-powerbank-spec-4": "Tiêu thụ: Active 160mA",
+  "gosafe-solutions-title": "Hệ thống Giám sát Phạm nhân",
+  "gosafe-solutions-subtitle": "Hệ thống quản lý, giám sát đối tượng tại ngoại và hỗ trợ tái hòa nhập xã hội",
+  "gosafe-solutions-cta-contact": "Liên hệ tư vấn",
+  "gosafe-solutions-cta-learn": "Tìm hiểu thêm",
+  "gosafe-solutions-admin-title": "Hệ thống cho Admin / Giám sát viên",
+  "gosafe-solutions-admin-1-title": "Giám sát trực tuyến",
+  "gosafe-solutions-admin-1-desc": "Xem vị trí GPS, tuyến đường, trạng thái thiết bị (cắt dây, pin, IBeacon) theo thời gian thực.",
+  "gosafe-solutions-admin-2-title": "Hệ thống cảnh báo",
+  "gosafe-solutions-admin-2-desc": "Cảnh báo cắt dây, pin yếu, ra khỏi vùng, mất tín hiệu, vi phạm thời gian qua web, app, email, SMS.",
+  "gosafe-solutions-admin-3-title": "Quản lý vùng địa lý",
+  "gosafe-solutions-admin-3-desc": "Thiết lập khu vực cho phép/cấm đa hình (tròn, đa giác, tuyến đường) và theo thời gian.",
+  "gosafe-solutions-admin-4-title": "Quản lý hồ sơ",
+  "gosafe-solutions-admin-4-desc": "Quản lý thông tin cá nhân, ảnh, ID, gán thiết bị và lịch sử vi phạm.",
+  "gosafe-solutions-admin-5-title": "Lịch sử di chuyển",
+  "gosafe-solutions-admin-5-desc": "Xem lại lộ trình, báo cáo tốc độ, điểm dừng và xuất file PDF/Excel.",
+  "gosafe-solutions-admin-6-title": "Báo cáo & Dashboard",
+  "gosafe-solutions-admin-6-desc": "Tổng quan trạng thái, báo cáo cảnh báo và analytics.",
+  "gosafe-solutions-admin-7-title": "Quản lý người dùng",
+  "gosafe-solutions-admin-7-desc": "Phân quyền (Admin/Supervisor/Operator) và log hoạt động.",
+  "gosafe-solutions-app-title": "App Mobile cho User / Phạm nhân",
+  "gosafe-solutions-app-desc": "App dành cho người bị giám sát để tuân thủ nghĩa vụ, báo cáo, check-in.",
+  "gosafe-solutions-app-1-title": "Check‑in định kỳ / xác minh",
+  "gosafe-solutions-app-1-desc": "Selfie, biometric để xác minh, check-in bất thường theo yêu cầu.",
+  "gosafe-solutions-app-2-title": "Vị trí & Geofence",
+  "gosafe-solutions-app-2-desc": "Ghi nhận vị trí, cảnh báo khi ra ngoài khu vực cho phép.",
+  "gosafe-solutions-app-3-title": "Nhắc nhở nghĩa vụ",
+  "gosafe-solutions-app-3-desc": "Hẹn gặp, báo cáo định kỳ, nhắc nhở thực hiện nghĩa vụ.",
+  "gosafe-solutions-app-4-title": "Liên lạc với cán bộ",
+  "gosafe-solutions-app-4-desc": "Tin nhắn, video/audio call khi được yêu cầu.",
+  "gosafe-solutions-app-5-title": "Lịch sử tuân thủ",
+  "gosafe-solutions-app-5-desc": "Xem lịch check-in, cảnh báo vi phạm, nhắc nhở.",
+  "gosafe-solutions-app-6-title": "Hỗ trợ tái hòa nhập",
+  "gosafe-solutions-app-6-desc": "Thông tin dịch vụ xã hội, việc làm, tư vấn, hỗ trợ tâm lý.",
+  "gosafe-solution-group-1-title": "Giám sát & Định vị Thông minh",
+  "gosafe-solution-group-1-desc": "Theo dõi vị trí thời gian thực và lịch sử di chuyển với độ chính xác cao.",
+  "gosafe-solution-group-2-title": "An ninh & Quản lý Geofence",
+  "gosafe-solution-group-2-desc": "Hệ thống cảnh báo chủ động cùng cấu hình vùng giám sát linh hoạt.",
+  "gosafe-solution-group-3-title": "Định danh & Tuân thủ",
+  "gosafe-solution-group-3-desc": "Đảm bảo đúng người, đúng thời điểm với xác thực sinh trắc học và lịch trình check-in.",
+  "gosafe-solution-group-4-title": "Quản lý & Phân tích Dữ liệu",
+  "gosafe-solution-group-4-desc": "Dashboard tập trung quản lý hồ sơ, thiết bị và phân tích hành vi đối tượng.",
+  "gosafe-solution-group-5-title": "Hệ thống Theo dõi Đa nền tảng",
+  "gosafe-solution-group-5-desc": "Ứng dụng di động dành riêng cho phạm nhân, hỗ trợ tuân thủ quy định và liên lạc. Cho phép điểm danh sinh trắc học, nhắn tin bảo mật với cơ quan chức năng và tiếp cận các nguồn lực tái hòa nhập. Công cụ này đảm bảo phạm nhân luôn giữ kết nối và tuân thủ các điều kiện giám sát."
 }
