refactor: change content

--- a/src/utils/locales/vi.json
+++ b/src/utils/locales/vi.json
@@ -1985,7 +1985,7 @@
   "tour-form-design-content": "Tùy chỉnh màu nền, màu nút, nội dung nút và các thiết lập thiết kế khác cho quảng cáo.",
   "tour-form-url-title": "URL & Links",
   "tour-form-url-content": "Nhập URL đích, link App Store, CH Play hoặc các liên kết khác tùy theo loại quảng cáo.",
-  "gosafe-hero-title-1": "G737",
+  "gosafe-hero-title-1": "ELITE",
   "gosafe-hero-title-2": "ANKLE",
   "gosafe-hero-title-3": "BRACELET",
   "gosafe-hero-subtitle-1": "Giải pháp giám sát tù nhân",
@@ -2011,7 +2011,7 @@
 
   "gosafe-specs-header-chip": "THÔNG SỐ KỸ THUẬT",
   "gosafe-specs-header-title": "Chi tiết kỹ thuật",
-  "gosafe-specs-tab-tracker": "G737 Tracker",
+  "gosafe-specs-tab-tracker": "Elite Tracker",
   "gosafe-specs-tab-powerbank": "Power Bank",
   "gosafe-specs-tab-beacon": "Indoor Beacon",
 
@@ -2032,7 +2032,7 @@
   "gosafe-faq-a6": "Việc tháo hoặc can thiệp vào thiết bị giám sát mắt cá chân GPS thường được coi là vi phạm các điều khoản quản thúc tại gia, quản chế, ân xá hoặc tại ngoại chờ xét xử. Hậu quả tiềm tàng là cảnh báo ngay lập tức. Thiết bị giám sát mắt cá chân GPS được thiết kế để thông báo cho cơ quan chức năng ngay khi thiết bị bị can thiệp hoặc tháo gỡ. Cảnh báo này thường được gửi theo thời gian thực.",
   "gosafe-faq-q7": "Vòng đeo theo dõi GPS cho tù nhân dùng được bao lâu?",
   "gosafe-faq-a7": "Tuổi thọ pin: Vòng đeo theo dõi GPS cho tù nhân kéo dài từ 24 đến 72 giờ cho một lần sạc đầy. Chúng có thể kéo dài đến 5 ngày tùy thuộc vào cài đặt của thiết bị và tần suất truyền dữ liệu vị trí.\\n\\nTần suất sạc: Chúng yêu cầu sạc hàng ngày hoặc cách ngày để đảm bảo chúng luôn hoạt động. Không sạc vòng đeo theo dõi GPS có thể kích hoạt cảnh báo đến cơ quan chức năng.\\n\\nPhương pháp sạc: Vòng đeo theo dõi GPS đi kèm với bộ sạc cho phép người đeo sạc thiết bị mà không cần phải tháo ra.",
-  "gosafe-product-g737-name": "G737 Tracker",
+  "gosafe-product-g737-name": "Elite Tracker",
   "gosafe-product-g737-subtitle": "Ankle Bracelet Tracker",
   "gosafe-product-g737-desc": "Giải pháp theo dõi tù nhân không bạo lực, giúp họ tái hòa nhập cộng đồng trong khi cơ quan quản lý vẫn kiểm soát 24/7.",
   "gosafe-product-g737-highlight": "Giám sát 24/7",
@@ -2049,9 +2049,9 @@
   "gosafe-product-g737-app-4": "Giám sát di chuyển thời gian thực",
   "gosafe-product-g737-app-5": "Tích hợp với hệ thống quản lý nhà tù",
 
-  "gosafe-product-beacon-name": "GIB737 Home Beacon",
+  "gosafe-product-beacon-name": "Elite Home Beacon",
   "gosafe-product-beacon-subtitle": "Thiết bị định vị trong nhà",
-  "gosafe-product-beacon-desc": "Thiết bị hỗ trợ xác định vị trí trong nhà, giúp G737 giám sát chính xác hơn khi phạm nhân ở trong khu vực không có GPS.",
+  "gosafe-product-beacon-desc": "Thiết bị hỗ trợ xác định vị trí trong nhà, giúp Elite giám sát chính xác hơn khi phạm nhân ở trong khu vực không có GPS.",
   "gosafe-product-beacon-highlight": "Indoor Tracking",
   "gosafe-product-beacon-badge": "ACCESSORY",
   "gosafe-product-beacon-feature-1": "Bluetooth 5.0",
@@ -2064,9 +2064,9 @@
   "gosafe-product-beacon-app-3": "Giảm sai số GPS",
   "gosafe-product-beacon-app-4": "Cảnh báo thiết bị bị dịch chuyển",
 
-  "gosafe-product-powerbank-name": "G737P-PB",
+  "gosafe-product-powerbank-name": "Elite Power Bank",
   "gosafe-product-powerbank-subtitle": "Pin dự phòng chuyên dụng",
-  "gosafe-product-powerbank-desc": "Pin dự phòng hiệu suất cao, kéo dài thời gian hoạt động của thiết bị giám sát G737 trong môi trường khắc nghiệt.",
+  "gosafe-product-powerbank-desc": "Pin dự phòng hiệu suất cao, kéo dài thời gian hoạt động của thiết bị giám sát Elite trong môi trường khắc nghiệt.",
   "gosafe-product-powerbank-highlight": "High Performance",
   "gosafe-product-powerbank-badge": "ACCESSORY",
   "gosafe-product-powerbank-feature-1": "Hỗ trợ giới hạn dòng vào",
@@ -2152,9 +2152,9 @@
   "gosafe-specs-value-red": "Đỏ",
   "gosafe-specs-value-yes": "Có",
   "gosafe-specs-value-years": "Lên đến 4 năm",
-  "gosafe-specs-value-seamless": "Hoạt động liền mạch với G737",
+  "gosafe-specs-value-seamless": "Hoạt động liền mạch với Elite",
   "gosafe-specs-value-indoor": "Indoor location",
-  "gosafe-specs-value-send-g737": "Gửi đến G737",
+  "gosafe-specs-value-send-g737": "Gửi đến Elite",
 
   "gosafe-contact-submit-success": "Gửi yêu cầu thành công!",
   "gosafe-contact-submit-error": "Có lỗi xảy ra.",
@@ -2217,13 +2217,13 @@
 
   "gosafe-product-beacon-detail-1-title": "Hoạt động liền mạch",
   "gosafe-product-beacon-detail-1-subtitle": "Mở rộng giám sát",
-  "gosafe-product-beacon-detail-1-content": "Hoạt động liền mạch với G737, mở rộng vùng giám sát indoor.",
+  "gosafe-product-beacon-detail-1-content": "Hoạt động liền mạch với Elite, mở rộng vùng giám sát indoor.",
   "gosafe-product-beacon-detail-2-title": "Tầm phát 100m",
   "gosafe-product-beacon-detail-2-subtitle": "Không cần GPS",
   "gosafe-product-beacon-detail-2-content": "Tầm phát 100m giúp định vị không cần GPS.",
   "gosafe-product-beacon-detail-3-title": "Cảnh báo dịch chuyển",
   "gosafe-product-beacon-detail-3-subtitle": "An toàn tối đa",
-  "gosafe-product-beacon-detail-3-content": "Gửi ngay tới G737 khi beacon bị tháo/gỡ.",
+  "gosafe-product-beacon-detail-3-content": "Gửi ngay tới Elite khi beacon bị tháo/gỡ.",
   "gosafe-product-beacon-detail-4-title": "Pin bền bỉ",
   "gosafe-product-beacon-detail-4-subtitle": "4 năm sử dụng",
   "gosafe-product-beacon-detail-4-content": "Pin lên đến 4 năm, không cần bảo trì nhiều.",
