--- a/src/utils/locales/en.json
+++ b/src/utils/locales/en.json
@@ -1943,7 +1943,7 @@
   "tour-form-design-content": "Customize background color, button color, button text and other design settings for the ad.",
   "tour-form-url-title": "URL & Links",
   "tour-form-url-content": "Enter destination URL, App Store link, CH Play or other links depending on ad type.",
-  "gosafe-hero-title-1": "ELITE",
+  "gosafe-hero-title-1": "ELECTRONIC",
   "gosafe-hero-title-2": "ANKLE",
   "gosafe-hero-title-3": "BRACELET",
   "gosafe-hero-subtitle-1": "Advanced Prisoner",
@@ -1969,7 +1969,7 @@
 
   "gosafe-specs-header-chip": "SPECIFICATIONS",
   "gosafe-specs-header-title": "Technical Details",
-  "gosafe-specs-tab-tracker": "Elite Tracker",
+  "gosafe-specs-tab-tracker": "Electronic Tracker",
   "gosafe-specs-tab-powerbank": "Power Bank",
   "gosafe-specs-tab-beacon": "Indoor Beacon",
 
@@ -1993,9 +1993,9 @@
   "gosafe-product-g737-app-4": "Real-time Movement Monitoring",
   "gosafe-product-g737-app-5": "Prison Management System Integration",
 
-  "gosafe-product-beacon-name": "Elite Home Beacon",
+  "gosafe-product-beacon-name": "Electronic Home Beacon",
   "gosafe-product-beacon-subtitle": "Indoor Positioning Device",
-  "gosafe-product-beacon-desc": "Device supporting indoor positioning, helping Elite monitor more accurately when the offender is in areas without GPS.",
+  "gosafe-product-beacon-desc": "Device supporting indoor positioning, helping Electronic monitor more accurately when the offender is in areas without GPS.",
   "gosafe-product-beacon-highlight": "Indoor Tracking",
   "gosafe-product-beacon-badge": "ACCESSORY",
   "gosafe-product-beacon-feature-1": "Bluetooth 5.0",
@@ -2008,9 +2008,9 @@
   "gosafe-product-beacon-app-3": "GPS Error Reduction",
   "gosafe-product-beacon-app-4": "Device Displacement Alert",
 
-  "gosafe-product-powerbank-name": "Elite Power Bank",
+  "gosafe-product-powerbank-name": "Electronic Power Bank",
   "gosafe-product-powerbank-subtitle": "Dedicated Power Bank",
-  "gosafe-product-powerbank-desc": "High-performance power bank, extending the operating time of Elite monitoring device in harsh environments.",
+  "gosafe-product-powerbank-desc": "High-performance power bank, extending the operating time of Electronic monitoring device in harsh environments.",
   "gosafe-product-powerbank-highlight": "High Performance",
   "gosafe-product-powerbank-badge": "ACCESSORY",
   "gosafe-product-powerbank-feature-1": "Input Current Limit Support",
@@ -2096,9 +2096,9 @@
   "gosafe-specs-value-red": "Red",
   "gosafe-specs-value-yes": "Yes",
   "gosafe-specs-value-years": "Up to 4 years",
-  "gosafe-specs-value-seamless": "Seamless operation with Elite",
+  "gosafe-specs-value-seamless": "Seamless operation with Electronic",
   "gosafe-specs-value-indoor": "Indoor location",
-  "gosafe-specs-value-send-g737": "Send to Elite",
+  "gosafe-specs-value-send-g737": "Send to Electronic",
 
   "gosafe-contact-submit-success": "Request sent successfully!",
   "gosafe-contact-submit-error": "An error occurred.",
@@ -2161,13 +2161,13 @@
 
   "gosafe-product-beacon-detail-1-title": "Seamless Operation",
   "gosafe-product-beacon-detail-1-subtitle": "Extended Monitoring",
-  "gosafe-product-beacon-detail-1-content": "Works seamlessly with Elite, extending indoor monitoring range.",
+  "gosafe-product-beacon-detail-1-content": "Works seamlessly with Electronic, extending indoor monitoring range.",
   "gosafe-product-beacon-detail-2-title": "100m Range",
   "gosafe-product-beacon-detail-2-subtitle": "No GPS Needed",
   "gosafe-product-beacon-detail-2-content": "100m range enables positioning without GPS.",
   "gosafe-product-beacon-detail-3-title": "Displacement Alert",
   "gosafe-product-beacon-detail-3-subtitle": "Maximum Safety",
-  "gosafe-product-beacon-detail-3-content": "Instantly notifies Elite when the beacon is removed or tampered with.",
+  "gosafe-product-beacon-detail-3-content": "Instantly notifies Electronic when the beacon is removed or tampered with.",
   "gosafe-product-beacon-detail-4-title": "Long Battery Life",
   "gosafe-product-beacon-detail-4-subtitle": "4 Years Usage",
   "gosafe-product-beacon-detail-4-content": "Battery lasts up to 4 years, requiring minimal maintenance.",
